<resources>
    <string name="app_name">MafiaHelper</string>
    <string name="action_settings">Settings</string>
    <string name="games_for_reds">Games for reds :</string>
    <string name="games_for_blacks">Games for blacks :</string>
    <string name="games_ter_sheriff">Games ter sheriff :</string>
    <string name="games_per_doctor">Games per doctor :</string>
    <string name="victories_for_reds">Victories for reds :</string>
    <string name="victories_for_black">Victories for blacks :</string>

    <string name="victories_per_sheriff">Victories per sheriff :</string>
    <string name="victories_per_doctor">Victories per doctor :</string>
    <string name="first_nigh_deaths">First night deaths :</string>
    <string name="first_voting_deaths">First voting deaths :</string>
    <string name="night_deaths">Night deaths</string>
    <string name="voting_deaths">Voting deaths</string>
    <string name="start_game">start game</string>
    <string name="name_title">Name :</string>
    <string name="add">Add</string>
    <string name="exit">Exit</string>
    <string name="number_of_mafia">Number of mafia :</string>
    <string name="doctor">Doctor</string>
    <string name="sheriff">Sheriff</string>
    <string name="deliver">/</string>
    <string name="go_to_first_day">go to first day</string>
    <string name="pseudonym">Alias :</string>
    <string name="go_to_first_night">go to first night</string>
    <string name="mafia">Mafia</string>
    <string name="go_to_day">go to day</string>
    <string name="select_active_players">SELECT ACTIVE PLAYERS</string>
    <string name="voting">voting</string>
    <string name="getting_to_known">getting to known</string>
    <string name="first_night">first night</string>
    <string name="day">day</string>
    <string name="player_name_transition">player_name_transition</string>
    <string name="red_victory">RED VICTORY</string>
    <string name="black_victory">BLACK VICTORY</string>
    <string name="search">search</string>
    <string name="select_game_options">select game options</string>
    <string name="choose_the_order_of_the_players">choose the order of the players</string>
    <string name="select_game_role">select game role</string>
    <string name="voting_nomanation">voting nomination</string>
    <string name="night">night</string>
    <string name="sheriff_check">Sheriff check</string>
    <string name="doctor_choice">doctor choice</string>
    <string name="sheriff_is_dead">Sheriff is dead</string>
    <string name="doctor_is_dead">Doctor is dead</string>
</resources>
