<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:id="@+id/ffni_frame"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_margin="2dp"
        android:background="@drawable/rounded_figure">

        <TextView
            android:id="@+id/ffni_pseudonym"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="player pseudonym"
            android:textColor="@color/base_text"
            android:textSize="@dimen/base_text"/>

        <TextView
            android:id="@+id/ffni_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/sub_text"
            android:textSize="@dimen/sub_text_size"
            android:text="name" />

        <CheckBox
            android:width="80dp"
            android:id="@+id/ffni_is_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/doctor" />

        <CheckBox
            android:width="80dp"

            android:id="@+id/ffni_is_sheriff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/sheriff" />

        <CheckBox
            android:width="80dp"

            android:id="@+id/ffni_is_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="10dp"
            android:text="@string/mafia" />

    </FrameLayout>
</layout>